# simulationw

./: BUILD.bazel  README.md  pom.xml
src/main/java/cn/edu/bupt/simulationw/: Coordinates.java  LOOCAlgorithm.java  Link.java  Node.java  SatelliteCoordinate.java  SatelliteService.java  ServiceGenerator.java  SimulationManager.java
src/main/java/org.onosproject.simulationw/: DefaultService.java  SatelliteConstellation.java  SatelliteConstellationService.java  SatelliteTopology.java  SatelliteTopologyService.java  Service.java  ServiceGenerateService.java  ServiceGenerator.java  SimulationManager.java
src/main/resource/: Topology-2.py  Topology.py  simulationResult.txt
src/main/resources/: Coordinates-24*66.txt  Coordinates-33*48.txt  Coordinates-48*33.txt  Coordinates.txt
src/test/java/: Test.java
